Fix form, gaps, limit width, autocomplete

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -16,15 +16,25 @@
     font-size: 32px;
     line-height: 150%;
     color: $color-white;
+    width: max-content;
 
     @include onTablet {
       margin-bottom: 48px;
+    }
+
+    &__container {
+      @include onTablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
     }
   }
 
   &__form {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .input {
