--- a/src/styles/blocks/expertise.scss
+++ b/src/styles/blocks/expertise.scss
@@ -3,9 +3,20 @@
   background-color: $color-white;
   border-radius: $block-border-rad-big;
   margin-bottom: 148px;
+  
+  @include onLaptop {
+    display: flex;
+    justify-content: center;
+  }
 
   @include onDesctop {
     padding: 128px 140px;
+  }
+
+  &__container {
+    @include onLaptop {
+      width: 800px;
+    }
   }
 
   &__head-title {
