--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -132,7 +132,7 @@
   }
 
   &__image {
-    height: 340px;
+    height: 362px;
     background-image: url("../images/slider/slide-img-1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
