--- a/src/styles/blocks/service.scss
+++ b/src/styles/blocks/service.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
 
   @include onTablet {
-    padding: 120px 0;
+    padding: 0;
     .br {
       display: none;
     }
