--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -6,7 +6,7 @@
 
   @include onTablet {
     flex-direction: column;
-    bottom: -60px;
+    bottom: -16px;
     left: 4%;
     gap: 16px;
   }
